...
        android:text="E-Mail"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="270sp"
        android:background="@drawable/rounded_corner"
        android:hint="Enter E-Mail Here"
...
        android:text="Password"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="290sp"
        android:layout_height="35sp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="337sp"
        android:background="@drawable/rounded_corner"
        android:hint="Enter Password Here"
        android:inputType="text"
        />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="325sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="400sp"
        android:backgroundTint="@color/whiteText"
...
