...
    <string name="select_profile_picture">Select Profile Picture</string>


    <!--    Arrays for Spinner-->
    <string-array name= "SubjectArrary">
        <item>Choose subject</item>
        <item>Maths</item>
        <item>English</item>
        <item>Irish</item>
        <item>Art</item>
        <item>Home Ec</item>
        <item>Business Studies</item>
        <item>Accounting</item>
...

    </string-array>

    <string-array name= "LevelArrary">
        <item>Choose level</item>
        <item>Junior Cert</item>
        <item>Leaving Cert</item>
        <item>Junior Cert + Leaving Cert</item>
        <item>Other</item>
    </string-array>

    <string-array name= "RoleArrary">
        <item>Choose Role</item>
...
