<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    Navigation Drawer Menu-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Home" />
        <item
            android:id="@+id/createAPost"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="Create A Post" />
        <item
            android:id="@+id/parentsViewOwnPosts"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="My Posts" />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="Chat" />
        <item
            android:id="@+id/aboutSavvyTutor"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="About SavvyTutor" />

    </group>

    <item android:title="Welcome Tutor">
        <menu>
            <item
                android:id="@+id/tutorHome"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="Home" />

            <item
                android:id="@+id/tutorCreate"
                android:icon="@drawable/ic_baseline_post_add_24"
                android:title="Create Post" />

            <item
                android:id="@+id/tutorViewOwnPosts"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="My Posts" />

            <item
                android:id="@+id/tutorChat"
                android:icon="@drawable/ic_baseline_chat_24"
                android:title="Chat" />

            <item
                android:id="@+id/tutorAbout"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="About SavvyTutor" />



        </menu>
    </item>











</menu>